# varvm

./: Cargo.toml  LICENSE  README.md
examples/: bitwise.vasm  calculator.vasm  cast.vasm  circular_a.vasm  circular_b.vasm  comparison.vasm  defines_test.vasm  error_test.vasm  factorial.vasm  guess_number.vasm  include_test.vasm  math_intrinsics.vasm  memory.vasm  my_lib.vasm  stack.vasm  stdlib_test.vasm  strings_stdlib_test.vasm  strings_test.vasm  test_immediates_in_call.vasm  test_simple_func.vasm  test_strings_final.vasm  test_strlen.vasm  test_strlen_inline.vasm  test_two_args.vasm  user_include_test.vasm
src/: examples.rs  lib.rs  main.rs  opcode.rs  program.rs  types.rs  vm.rs
src/asm/: assembler.rs  ast.rs  disassembler.rs  error.rs  lexer.rs  mod.rs  parser.rs
src/bytecode/: decoder.rs  encoder.rs  mod.rs
src/stdlib/: mod.rs
src/tools/: debugger.rs  mod.rs  profiler.rs  repl.rs
stdlib/: math.vasm  prelude.vasm  strings.vasm
varvm-macros/: Cargo.toml
varvm-macros/src/: lib.rs
